plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.anyang'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// === Spring Boot 스타터 의존성 ===

	// Spring Web (Controller, RestController 등 웹 어플리케이션 기본 구성)
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Data JPA (ORM, Repository 등 DB 연동 기능 제공)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// === Spring Security 관련 의존성 ===
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// JWT (JSON Web Token) 관련 라이브러리
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// OAuth2 클라이언트 (소셜 로그인 등 외부 인증 제공자와의 연동)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


	// === Redis 관련 의존성 ===

	// Spring Data Redis (Redis 연동 기능 제공)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Redis 커넥션 풀을 위한 commons-pool2
	implementation 'org.apache.commons:commons-pool2'

	// === API 문서화 및 유효성 검사 ===

	// Swagger(OpenAPI) 문서 자동 생성
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

	// Spring Boot Actuator (헬스체크, 메트릭 등)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Hibernate Validator (Bean Validation을 위한 의존성)
	implementation 'org.hibernate.validator:hibernate-validator'

	// === OpenAI API 관련 의존성 ===

	// OpenAI Java SDK (GPT API 연동용)
	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

	// HTTP 클라이언트 (OpenAI SDK 내부 사용)
	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
	implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'


	// === DB 드라이버 ===

	// PostgreSQL 드라이버 (JPA와 연동되는 실DB 연결용)
	runtimeOnly 'org.postgresql:postgresql'


	// === 개발 편의성 ===

	// Lombok (코드 자동 생성 - getter/setter 등)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// === 테스트 의존성 ===

	// Spring Boot 테스트 기능 (JUnit, MockMvc 등 포함)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	
	// H2 인메모리 데이터베이스 (테스트용)
	testRuntimeOnly 'com.h2database:h2'

	// OpenAI API 테스트용 Mock 서버
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
